# llm-evalops-lab

./: .env.example  .gitignore  Makefile  PROJECT_MANIFEST.json  README.md  pyproject.toml
.github/workflows/: ci.yml
baselines/: fake-expanded-baseline.json
config/: model_registry.json
configs/: eval.default.json
data/: expanded_dataset.jsonl  rag_eval_dataset.jsonl  rag_failure_dataset.jsonl  redteam_dataset.jsonl  sample_dataset.jsonl
data/rag_corpus/: evals.md  rag.md  safety.md  security.md
docs/: architecture.md  evaluation.md  github_setup.md  phase10_failure_evidence.md  phase2_evalops.md  phase3_regression_gate.md  phase4_rag_evaluation.md  phase5_experiment_tracking.md  phase6_model_registry.md  phase7_safety_redteam.md  phase8_release_readiness.md  phase9_static_dashboard.md
notebooks/: README.md
scripts/: openai_smoke.py  run_eval.py
src/llm_lab/: __init__.py  cli.py  config.py  dashboard.py  dataset.py  evals.py  experiments.py  metrics.py  model_registry.py  observability.py  prompts.py  readiness.py  regression.py  reporting.py  safety.py  schemas.py
src/llm_lab/providers/: __init__.py  base.py  fake.py  openai_provider.py
src/llm_lab/rag/: __init__.py  eval.py  index.py
tests/: test_cli_models.py  test_dashboard.py  test_dataset.py  test_eval_runner.py  test_experiments.py  test_failure_evidence.py  test_metrics.py  test_model_registry.py  test_rag.py  test_rag_eval.py  test_readiness.py  test_regression.py  test_reporting.py  test_safety.py  test_safety_redteam.py
